[gd_scene load_steps=20 format=2]

[ext_resource path="res://HUDScreen/assets/planet02.png" type="Texture" id=1]
[ext_resource path="res://HUDScreen/assets/star_07.png" type="Texture" id=2]
[ext_resource path="res://HUDScreen/assets/star_02.png" type="Texture" id=3]
[ext_resource path="res://HUDScreen/assets/planet09.png" type="Texture" id=4]
[ext_resource path="res://HUDScreen/assets/star_09.png" type="Texture" id=5]
[ext_resource path="res://HUDScreen/assets/star_08.png" type="Texture" id=6]
[ext_resource path="res://Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://HUDScreen/assets/star_06.png" type="Texture" id=8]
[ext_resource path="res://HUDScreen/GetPlayerAttributes.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.968627, 0.784314, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.921569, 0.231373, 1, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=10]
size = 50
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.639216, 0, 1, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Panel" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = SubResource( 1 )

[node name="SpaceGraphic" type="MarginContainer" parent="."]
margin_left = 400.0
margin_right = 1920.0
margin_bottom = 400.0

[node name="Panel" type="Panel" parent="SpaceGraphic"]
margin_right = 1520.0
margin_bottom = 400.0
custom_styles/panel = SubResource( 5 )

[node name="Star08" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 740, 44 )
scale = Vector2( 0.162109, 0.162109 )
texture = ExtResource( 6 )

[node name="Star02" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 1375, 105 )
scale = Vector2( 0.21875, 0.21875 )
texture = ExtResource( 3 )

[node name="Planet02" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 350, 400 )
scale = Vector2( 0.382812, 0.382812 )
texture = ExtResource( 1 )

[node name="Planet09" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 976, 80 )
scale = Vector2( 0.0875, 0.0875 )
texture = ExtResource( 4 )

[node name="Star09" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 76, 56 )
scale = Vector2( 0.113769, 0.113769 )
texture = ExtResource( 5 )

[node name="Star07" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 656, 307 )
scale = Vector2( 0.131836, 0.131836 )
texture = ExtResource( 2 )

[node name="Star06" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 1218, 344 )
scale = Vector2( 0.189453, 0.189453 )
texture = ExtResource( 8 )

[node name="Star10" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 407, 99 )
scale = Vector2( 0.0800781, 0.0800781 )
texture = ExtResource( 8 )

[node name="Star11" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 105, 223 )
scale = Vector2( 0.0917969, 0.0917969 )
texture = ExtResource( 8 )

[node name="Star03" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 1055, 39 )
scale = Vector2( 0.109375, 0.109375 )
texture = ExtResource( 3 )

[node name="Star12" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 939, 246 )
scale = Vector2( 0.0527344, 0.0527344 )
texture = ExtResource( 6 )

[node name="Star04" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 45, 360 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 3 )

[node name="Star05" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 1167, 153 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 3 )

[node name="Star13" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 619, 138 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 3 )

[node name="Star14" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 837, 349 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 3 )

[node name="Star15" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 1279, 48 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 3 )

[node name="Star16" type="Sprite" parent="SpaceGraphic/Panel"]
position = Vector2( 1385, 308 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 3 )

[node name="ShipIcon" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1520.0
margin_bottom = -680.0

[node name="Panel" type="Panel" parent="ShipIcon"]
margin_right = 400.0
margin_bottom = 400.0
custom_styles/panel = SubResource( 2 )

[node name="Attributes" type="MarginContainer" parent="."]
margin_top = 400.0
margin_right = 1265.0
margin_bottom = 1080.0
script = ExtResource( 9 )

[node name="BackgroundPanel" type="Panel" parent="Attributes"]
margin_right = 1265.0
margin_bottom = 680.0
custom_styles/panel = SubResource( 3 )

[node name="Display" type="VBoxContainer" parent="Attributes"]
margin_right = 1265.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelLabel" type="Label" parent="Attributes/Display"]
margin_right = 1265.0
margin_bottom = 90.0
rect_min_size = Vector2( 1260, 90 )
custom_fonts/font = SubResource( 7 )
text = "Level: 999
"
autowrap = true
clip_text = true

[node name="ExpLabel" type="Label" parent="Attributes/Display"]
margin_top = 94.0
margin_right = 1265.0
margin_bottom = 184.0
rect_min_size = Vector2( 1260, 90 )
custom_fonts/font = SubResource( 7 )
text = "Exp: 999/999
"
autowrap = true
clip_text = true

[node name="HullPoints" type="HBoxContainer" parent="Attributes/Display"]
margin_top = 188.0
margin_right = 1265.0
margin_bottom = 278.0

[node name="HPLabel" type="Label" parent="Attributes/Display/HullPoints"]
margin_right = 1040.0
margin_bottom = 90.0
rect_min_size = Vector2( 1040, 90 )
custom_fonts/font = SubResource( 7 )
text = "Hull Points: 99/99"
autowrap = true
clip_text = true

[node name="HPButton" type="Button" parent="Attributes/Display/HullPoints"]
margin_left = 1044.0
margin_right = 1244.0
margin_bottom = 90.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 8 )
text = "+1"

[node name="ShieldPoints" type="HBoxContainer" parent="Attributes/Display"]
margin_top = 282.0
margin_right = 1265.0
margin_bottom = 372.0

[node name="ShieldLabel" type="Label" parent="Attributes/Display/ShieldPoints"]
margin_right = 1040.0
margin_bottom = 90.0
rect_min_size = Vector2( 1040, 90 )
custom_fonts/font = SubResource( 7 )
text = "Shield Points: 99/99"
autowrap = true
clip_text = true

[node name="ShieldButton" type="Button" parent="Attributes/Display/ShieldPoints"]
margin_left = 1044.0
margin_right = 1244.0
margin_bottom = 90.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 9 )
text = "+1"

[node name="Acceleration" type="HBoxContainer" parent="Attributes/Display"]
margin_top = 376.0
margin_right = 1265.0
margin_bottom = 466.0

[node name="AccelLabel" type="Label" parent="Attributes/Display/Acceleration"]
margin_right = 1040.0
margin_bottom = 90.0
rect_min_size = Vector2( 1040, 90 )
custom_fonts/font = SubResource( 7 )
text = "Acceleration: 10"
autowrap = true
clip_text = true

[node name="AccelButton" type="Button" parent="Attributes/Display/Acceleration"]
margin_left = 1044.0
margin_right = 1244.0
margin_bottom = 90.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 10 )
text = "+1"

[node name="Handling" type="HBoxContainer" parent="Attributes/Display"]
margin_top = 470.0
margin_right = 1265.0
margin_bottom = 560.0

[node name="HandlingLabel" type="Label" parent="Attributes/Display/Handling"]
margin_right = 1040.0
margin_bottom = 90.0
rect_min_size = Vector2( 1040, 90 )
custom_fonts/font = SubResource( 7 )
text = "Handling: 10"
autowrap = true
clip_text = true

[node name="HandlingButton" type="Button" parent="Attributes/Display/Handling"]
margin_left = 1044.0
margin_right = 1244.0
margin_bottom = 90.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 10 )
text = "+1"

[node name="Battery" type="HBoxContainer" parent="Attributes/Display"]
margin_top = 564.0
margin_right = 1265.0
margin_bottom = 654.0

[node name="BatteryLabel" type="Label" parent="Attributes/Display/Battery"]
margin_right = 1040.0
margin_bottom = 90.0
rect_min_size = Vector2( 1040, 90 )
custom_fonts/font = SubResource( 7 )
text = "Battery: 10"
autowrap = true
clip_text = true

[node name="BatteryButton" type="Button" parent="Attributes/Display/Battery"]
margin_left = 1044.0
margin_right = 1244.0
margin_bottom = 90.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 10 )
text = "+1"

[node name="Buttons" type="MarginContainer" parent="."]
margin_left = 1260.0
margin_top = 400.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Panel" type="Panel" parent="Buttons"]
margin_right = 660.0
margin_bottom = 680.0
custom_styles/panel = SubResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
margin_right = 660.0
margin_bottom = 680.0

[node name="Button" type="Button" parent="Buttons/VBoxContainer"]
margin_right = 660.0
margin_bottom = 340.0
rect_min_size = Vector2( 0, 340 )
custom_fonts/font = SubResource( 11 )
text = "Upgrade Shop"

[connection signal="pressed" from="Attributes/Display/HullPoints/HPButton" to="Attributes" method="_on_HPButton_pressed"]
[connection signal="pressed" from="Attributes/Display/ShieldPoints/ShieldButton" to="Attributes" method="_on_ShieldButton_pressed"]
[connection signal="pressed" from="Attributes/Display/Acceleration/AccelButton" to="Attributes" method="_on_AccelButton_pressed"]
[connection signal="pressed" from="Attributes/Display/Handling/HandlingButton" to="Attributes" method="_on_HandlingButton_pressed"]
[connection signal="pressed" from="Attributes/Display/Battery/BatteryButton" to="Attributes" method="_on_BatteryButton_pressed"]
